--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://voroglex.github.io/calculate-react.github.io/",
+  "homepage": "https://voroglex.github.io/calculate-react/",
   "name": "my-calculate",
   "version": "0.1.0",
   "private": true,
